# awsaudio-extension

./: README.md  flake.nix  server.py  setup.cfg
awsaudio/: __init__.py  extension.py
