[metadata]
name = awsaudio
version = 0.1.0
summary = LocalStack Extension: AWSAudio
url = https://github.com/simonrw/awsaudio-extension
author = Simon Walker
author_email = simon.walker@localstack.cloud
description = Play music from your cloud infrastructure 🎼
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=1.0
    pyaudio
    requests

[options.entry_points]
localstack.extensions =
    awsaudio = awsaudio.extension:AWSAudio
